recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:15: error: Unmatched closing brace '}' ignored here
}
^