recursion.logo.square.FourSquare.scala.code
override def run() {
  baisseCrayon()
  f();
  gauche(90);gauche(90);f()
}

def f(){
  for (j<- 1 to 4){
  	avance(100)
  }
  gauche(90)
}}
